# rust-cli-skeleton

./: Cargo.toml  README.md  build.rs
proto/: example.proto
src/: main.rs
src/commands/: mod.rs
src/commands/example/: command.rs
src/commands/example/subcommands/: mod.rs
src/commands/example/subcommands/mysubcommand/: command.rs
src/commands/grpc/: server.rs
src/commands/hello/: command.rs
src/commands/http/: server.rs
src/grpc/: server.rs
src/http/: mod.rs  server.rs
src/http/handler/: hello.rs
src/log/: logger.rs
