[package]
name = "rust-cli-skeleton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["cargo", "derive"] }
log = "0.4.17"
simplelog = { version = "0.12.0", features = ["ansi_term"] }
